# sgmap

./: .clinerules  .coverage  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yaml  test.yml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
sgmap/: __init__.py  core.py
sgmap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sgmap/: cli.py  core.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py
