[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sgmap"
description = "AWS Security Group Mapping Tool"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12.0"
dependencies = [
    "boto3>=1.20.0",
    "click>=8.0.0",
]
dynamic = ["version"]

[tools.setuptools.package-dir]
sgmap = "src/sgmap"

[tool.setuptools_scm]
write_to = "src/sgmap/_version.py"
